--- a/store.css
+++ b/store.css
@@ -19,20 +19,17 @@
   display: flex;
   gap: 20px;
   margin-top: 13px;
-  /* No need for fixed height here */
+  
 }
 
-/* Keep the left side fixed while scrolling */
+
 .store-details-left {
   background-color: #f5f5f5;
-  width: 35%; /* Width of the fixed sidebar */
-  margin-top: 130px;
+  width: 35%; 
   padding: 8px 16px;
   position: fixed;
-  z-index: 1;
-  top: 0;
-  bottom: 0; /* Ensures it is always fixed on the left side */
-  height: 100vh; /* Occupy full height of the viewport */
+  top: 21%;
+  bottom: 0;
  
 }
 
